--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     </uses-permission>
 
     <application
+        android:name=".MusicApp"
         android:networkSecurityConfig="@xml/security_config"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
